Added endpoint for adding device. Removed useless tests.